--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DATASOURCE
 spring.datasource.url= jdbc:mysql://localhost:3306/carloses?createDatabaseIfNotExist=true
 spring.datasource.username= root
-spring.datasource.password= root
+spring.datasource.password= Senha123
 
 #JPA
 spring.jpa.hibernate.ddl-auto= update
